<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prayer_time"
    android:background="@color/jaune">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ablution"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="25sp"/>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:id="@+id/videoView"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"

                />
</FrameLayout>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etapeAblution"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="25sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etapeAblution2"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="15sp"/>









        </LinearLayout>

    </ScrollView>




</FrameLayout>