<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prayer_time"
    android:background="@color/jaune">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/pray"
                    />

                <TextView
                    android:id="@+id/pray"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/prayer"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="200dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="380dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:maxHeight="20sp"
                    android:src="@drawable/prayer_time"
                    android:scaleType="centerInside"/>

            </androidx.cardview.widget.CardView>





            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrederakaa"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/nb_rakaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voix"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/voix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Haute"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="25sp"/>

            </LinearLayout>





        </LinearLayout>
    </ScrollView>




</FrameLayout>
